--- a/html/herramientaJS.html
+++ b/html/herramientaJS.html
@@ -6,6 +6,47 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Herramientas Js</h1>
+        <ul>
+            <li>
+                variables y tipos
+            </li>
+            <li>
+                Estructuras
+            </li>
+            <li>
+                Funciones
+            </li>
+            <li>
+                DOM
+            </li>
+            <li>
+                Fetch / AJAKS
+            </li>
+            <li>
+                Promesas y Async / Await
+            </li>
+            <li>
+                Promesas y Async / Await
+            </li>
+                Módulos 
+            <li>
+                Clases
+            </li>
+            <li>
+                Manejo de errores
+            </li>
+        </ul>
+    </header>
     
+    <main>
+        <h2>Veremos todo lonque es mas utilizado para dar funcionalidad al html</h2>
+    </main>
+    
+    <section>
+        <h3>Variables y tipos</h3>
+        <p>"let", "const" y "var" son declaraciones <br> "let" Puede editarse en su valor <br> "const" no puede ser editada en su valor <br> "var" no suele utilizarse hoy en día</p>
+    </section>
 </body>
 </html>
