Conecté los archivos HTML con links

--- a/html/aprenderCSS.html
+++ b/html/aprenderCSS.html
@@ -12,6 +12,7 @@
     <h1>herramientas css</h1>
 
     <header>
+      <h3><a href="/index.html">Inicio</a></h3>
       <nav>
         <ul>
           <li>selectores</li>
