--- a/html/aprenderJs.html
+++ b/html/aprenderJs.html
@@ -8,6 +8,7 @@
   <body>
     <header>
       <h1>Herramientas Js</h1>
+      <h3><a href="/index.html">Inicio</a></h3>
       <ul>
         <li>variables y tipos</li>
         <li>Estructuras</li>
