--- a/html/aprenderHTML.html
+++ b/html/aprenderHTML.html
@@ -13,6 +13,7 @@
     <h3>Etiquetas de estrucutura</h3>
 
     <header>
+        <h3><a href="/index.html">Inicio</a></h3>
         <nav>
             <ul>
                 <li>
