Añadi algunas modificaciones con CSS

--- a/html/aprenderCSS.html
+++ b/html/aprenderCSS.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="etiquetas css"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="Aprender CSS" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="/css/styles.css">
     <title>CSS</title>
   </head>
   <body>
@@ -70,7 +68,41 @@
 
     <section>
       <h3>Layout</h3>
-      <p>no se ni para que se usa. <br> sus propiedades son: <br> En "display": "block"</p>
+      <p>
+        no se ni para que se usa. <br />
+        sus propiedades son: <br />
+        En "display": "block"
+      </p>
+    </section>
+
+    <section>
+      <h3>Posicionamiento</h3>
+
+      <p>
+        position: static, relative, absolute, fixed, sticky.
+      </p>
+      <p>
+        top, right, bottom, left, z-index.
+      </p>
+    </section>
+
+    <section>
+      <h3>Tranciciones y animaciones</h3>
+
+      <p>
+        transition-property, transition-duration, transition-timing-function.
+      </p>
+      <p>
+        animation-name, animation-duration, animation-iteration-count, @keyframes.
+      </p>
+    </section>
+
+    <section>
+      <h3>Visual "avanzado"</h3>
+
+      <p>
+        box-shadow, text-shadow, filter, transform, opacity, visibility.
+      </p>
     </section>
   </body>
 </html>
