--- a/html/aprenderHTML.html
+++ b/html/aprenderHTML.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="Aperender desarrollo wew" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <title>HTML</title>
 </head>
 <body>
 
