cambios en la estructura

--- a/html/aprenderCSS.html
+++ b/html/aprenderCSS.html
@@ -2,8 +2,8 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="Aprender CSS" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="/css/styles.css">
+    <meta name="Aprender CSS" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>CSS</title>
   </head>
   <body>
@@ -28,81 +28,76 @@
       <h2>herramientas de CSS</h2>
 
       <p>Veremos todolo que es mas utilizado en css para dar estilo al html</p>
+
+      <section>
+        <h3>selectores</h3>
+        <p>"Element", ".clase", "#id" seleccionan elementos del HTML</p>
+        <br />
+        <p>
+          "element, element" <br />
+          "element element" <br />
+          "element > element" son combinadores
+        </p>
+      </section>
+
+      <section>
+        <h3>Box model (modelo de caja)</h3>
+        <p>
+          Prpiedades utilizadas para hacer box model: <br />
+          "margin", "padding", "whidth", "Heigt", "boxi-sizing"
+        </p>
+      </section>
+
+      <section>
+        <h3>Texto y tipografia</h3>
+        <p>
+          Las propiedades utilizadas para el texto y la tipografia son: <br />
+          "fotn-size", "font-family", "font-weight", "line-heigt", "text-align",
+          "color"
+        </p>
+      </section>
+
+      <section>
+        <h3>Visual (fondo y bordes)</h3>
+        <p>
+          "backgroun color", "background-image" backgroun-size", "border",
+          "border-radius", "opacity"
+        </p>
+      </section>
+
+      <section>
+        <h3>Layout</h3>
+        <p>
+          no se ni para que se usa. <br />
+          sus propiedades son: <br />
+          En "display": "block"
+        </p>
+      </section>
+
+      <section>
+        <h3>Posicionamiento</h3>
+
+        <p>position: static, relative, absolute, fixed, sticky.</p>
+        <p>top, right, bottom, left, z-index.</p>
+      </section>
+
+      <section>
+        <h3>Tranciciones y animaciones</h3>
+
+        <p>
+          transition-property, transition-duration, transition-timing-function.
+        </p>
+        <p>
+          animation-name, animation-duration, animation-iteration-count,
+          @keyframes.
+        </p>
+      </section>
+
+      <section>
+        <h3>Visual "avanzado"</h3>
+
+        <p>box-shadow, text-shadow, filter, transform, opacity, visibility.</p>
+      </section>
     </main>
-
-    <section>
-      <h3>selectores</h3>
-      <p>"Element", ".clase", "#id" seleccionan elementos del HTML</p>
-      <br />
-      <p>
-        "element, element" <br />
-        "element element" <br />
-        "element > element" son combinadores
-      </p>
-    </section>
-
-    <section>
-      <h3>Box model (modelo de caja)</h3>
-      <p>
-        Prpiedades utilizadas para hacer box model: <br />
-        "margin", "padding", "whidth", "Heigt", "boxi-sizing"
-      </p>
-    </section>
-
-    <section>
-      <h3>Texto y tipografia</h3>
-      <p>
-        Las propiedades utilizadas para el texto y la tipografia son: <br />
-        "fotn-size", "font-family", "font-weight", "line-heigt", "text-align",
-        "color"
-      </p>
-    </section>
-
-    <section>
-      <h3>Visual (fondo y bordes)</h3>
-      <p>
-        "backgroun color", "background-image" backgroun-size", "border",
-        "border-radius", "opacity"
-      </p>
-    </section>
-
-    <section>
-      <h3>Layout</h3>
-      <p>
-        no se ni para que se usa. <br />
-        sus propiedades son: <br />
-        En "display": "block"
-      </p>
-    </section>
-
-    <section>
-      <h3>Posicionamiento</h3>
-
-      <p>
-        position: static, relative, absolute, fixed, sticky.
-      </p>
-      <p>
-        top, right, bottom, left, z-index.
-      </p>
-    </section>
-
-    <section>
-      <h3>Tranciciones y animaciones</h3>
-
-      <p>
-        transition-property, transition-duration, transition-timing-function.
-      </p>
-      <p>
-        animation-name, animation-duration, animation-iteration-count, @keyframes.
-      </p>
-    </section>
-
-    <section>
-      <h3>Visual "avanzado"</h3>
-
-      <p>
-        box-shadow, text-shadow, filter, transform, opacity, visibility.
-      </p>
-    </section>
   </body>
 </html>
