cambios del css

--- a/html/aprenderCSS.html
+++ b/html/aprenderCSS.html
@@ -10,15 +10,15 @@
     <h1>herramientas css</h1>
 
     <header>
-      <h3><a href="/index.html">Inicio</a></h3>
       <nav>
+        <h3><a href="/index.html">Inicio</a></h3>
         <ul>
           <li>selectores</li>
           <li>box model</li>
-          <li>texto y tpografia</li>
+          <li>texto y tipografia</li>
           <li>visual y bordes</li>
           <li>posicionamiento</li>
-          <li>tranciciones y animaciones</li>
+          <li>transiciones y animaciones</li>
           visual avanzado
         </ul>
       </nav>
@@ -27,7 +27,7 @@
     <main>
       <h2>herramientas de CSS</h2>
 
-      <p>Veremos todolo que es mas utilizado en css para dar estilo al html</p>
+      <p>Veremos todo lo que es mas utilizado en css para dar estilo al html</p>
 
       <section>
         <h3>selectores</h3>
@@ -43,8 +43,8 @@
       <section>
         <h3>Box model (modelo de caja)</h3>
         <p>
-          Prpiedades utilizadas para hacer box model: <br />
-          "margin", "padding", "whidth", "Heigt", "boxi-sizing"
+          Propiedades utilizadas para hacer box model: <br />
+          "margin", "padding", "width", "height", "box-sizing"
         </p>
       </section>
 
@@ -52,7 +52,7 @@
         <h3>Texto y tipografia</h3>
         <p>
           Las propiedades utilizadas para el texto y la tipografia son: <br />
-          "fotn-size", "font-family", "font-weight", "line-heigt", "text-align",
+          "font-size", "font-family", "font-weight", "line-height", "text-align",
           "color"
         </p>
       </section>
@@ -60,7 +60,7 @@
       <section>
         <h3>Visual (fondo y bordes)</h3>
         <p>
-          "backgroun color", "background-image" backgroun-size", "border",
+          "background-color", "background-image" "background-size", "border",
           "border-radius", "opacity"
         </p>
       </section>
@@ -68,7 +68,7 @@
       <section>
         <h3>Layout</h3>
         <p>
-          no se ni para que se usa. <br />
+          Todavia no llegue a estudiar este tema <br />
           sus propiedades son: <br />
           En "display": "block"
         </p>
@@ -82,7 +82,7 @@
       </section>
 
       <section>
-        <h3>Tranciciones y animaciones</h3>
+        <h3>Transiciones y animaciones</h3>
 
         <p>
           transition-property, transition-duration, transition-timing-function.
