Correccion de HTML "aprender HTML"

--- a/html/aprenderHTML.html
+++ b/html/aprenderHTML.html
@@ -1,112 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="Aperender desarrollo wew" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="Aperender desarrollo wew"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>HTML</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <h1>Conociendo html</h1>
 
     <h3>Etiquetas de estrucutura</h3>
 
     <header>
-        <h3><a href="/index.html">Inicio</a></h3>
-        <nav>
-            <ul>
-                <li>
-                    <p>"header" es la cabecera de la estrucutura</p>
-                </li>
-                <li>
-                    <p>"nav" es la barra de navegacion en la cabecera</p>
-                </li>
-                <li>
-                    <p>"ul" es una lista desordenada, creo</p>
-                </li>
-                <li>
-                    <p>"ol" es una lista desordenada</p>
-                </li>
-                <li>
-                    "li" es la etiqueta de lista
-                </li>
-            </ul>
-        </nav>
+      <h3><a href="/index.html">Inicio</a></h3>
+      <nav>
+        <ul>
+          <li>
+            <p>"header" es la cabecera de la estrucutura</p>
+          </li>
+          <li>
+            <p>"nav" es la barra de navegacion en la cabecera</p>
+          </li>
+          <li>
+            <p>"ul" es una lista desordenada, creo</p>
+          </li>
+          <li>
+            <p>"ol" es una lista desordenada</p>
+          </li>
+          <li>"li" es la etiqueta de lista</li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <h1>Soy el contenido principal</h1>
-        <p>Acá va el corazon del contenido</p>
+      <h1>Soy el contenido principal</h1>
+      <p>Acá va el corazon del contenido</p>
     </main>
 
     <section>
-        <p>Esta es una de las secciones del contenido en la pagina, una"tematica" o "categoria", una seccion</p>
+      <p>
+        Esta es una de las secciones del contenido en la pagina, una"tematica" o
+        "categoria", una seccion
+      </p>
     </section>
 
-    <article>
-        <p>Este es un articulo, es independiente al contenido de la pagina, puede ser un link o imagen con link que dirija a contenido del mismo creador, relacionado al contenido de lapagina o publicidad dentro de la pagina, no necesariamente esta relacionado con el contenido de la pagina</p>
-    </article>
+    <section>
+      <article>
+        <p>
+          Este es un articulo, es independiente al contenido de la pagina, puede
+          ser un link o imagen con link que dirija a contenido del mismo
+          creador, relacionado al contenido de lapagina o publicidad dentro de
+          la pagina, no necesariamente esta relacionado con el contenido de la
+          pagina
+        </p>
+      </article>
+    </section>
 
-    <aside>
-        <p>aside se utiliza para enmarcar contenido indirectamente relacionado con el contenido principal, supongo que la cita a un autor, frase o articulo que vaya en la misma linea que el contenido</p>
-    </aside>
+    <section>
+      <aside>
+        <p>
+          aside se utiliza para enmarcar contenido indirectamente relacionado
+          con el contenido principal, supongo que la cita a un autor, frase o
+          articulo que vaya en la misma linea que el contenido
+        </p>
+      </aside>
+    </section>
 
-    <p>Utilizar selectores</p>
-    <p id="idParrafo">tambien id</p>
-    <p class="Clase">Clases</p>               
+    <section>
+      <p>Utilizar selectores</p>
+      <p id="idParrafo">tambien id</p>
+      <p class="Clase">Clases</p>
+    </section>
 
-    <footer>
-        <p>Footer es el pie de pagina en el que se suelen enlazar links de contacto, marcas asociadas o derechos de autor/legales</p>
-    </footer>
+    <section>
+      <footer>
+        <p>
+          Footer es el pie de pagina en el que se suelen enlazar links de
+          contacto, marcas asociadas o derechos de autor/legales
+        </p>
+      </footer>
+    </section>
 
-    <h3>Contenido y texto</h3>
+    <section>
+      <h3>Contenido y texto</h3>
 
-    <p>"h1" hasta "h6" encabezados, se usan en titulos, subtitulos y encabezados</p>
+      <p>
+        "h1" hasta "h6" encabezados, se usan en titulos, subtitulos y
+        encabezados
+      </p>
 
-    <p>"p" es la etiqueta que usamos en los parrafos</p>
+      <p>"p" es la etiqueta que usamos en los parrafos</p>
 
-    <p>"a" es la etiqueta que usamos para enlaces externos o para enlaces externos con los siguente astributos:</p>
+      <p>
+        "a" es la etiqueta que usamos para enlaces externos o para enlaces
+        externos con los siguente astributos:
+      </p>
 
-    <p>"src"</p>
-    <p>"alt"</p>
-    <p>"whidth"</p>
-    <p>"Heigt"</p>
-    <p>Estos atributos se sulen usar en fotos, iconos, etc</p>
+      <p>"src"</p>
+      <p>"alt"</p>
+      <p>"whidth"</p>
+      <p>"Heigt"</p>
+      <p>Estos atributos se sulen usar en fotos, iconos, etc</p>
 
-    <p>"ul" "ol" "li"</p>
-    <p>"ul" lista ordenada, creo</p>
-    <p>"ol" lista desorenada, creo</p>
-    <p>"li" parrafo de lista, creo</p>
-    
-    <p>"div" es un contenedor generico</p>
+      <p>"ul" "ol" "li"</p>
+      <p>"ul" lista ordenada, creo</p>
+      <p>"ol" lista desorenada, creo</p>
+      <p>"li" parrafo de lista, creo</p>
 
-    <p>Span no se bien que es pero es otro contenedor</p>
+      <p>"div" es un contenedor generico</p>
 
+      <p>Span no se bien que es pero es otro contenedor</p>
 
-    <h3>Formulario y entradas</h3>
+      <h3>Formulario y entradas</h3>
 
-    <p>"form" es un formulario, agrupa campos, tiene algunos atributos <br> "action" <br> "method"</p>
+      <p>
+        "form" es un formulario, agrupa campos, tiene algunos atributos <br />
+        "action" <br />
+        "method"
+      </p>
 
-    <p>"input" para que el usuario ingrese texto dentro del formulario con datos personales generalmente. atributos para esta etiqueta: <br> "type"  <br> "name" <br> "value" <br> "placeholder" <br> "required"</p>
+      <p>
+        "input" para que el usuario ingrese texto dentro del formulario con
+        datos personales generalmente. atributos para esta etiqueta: <br />
+        "type" <br />
+        "name" <br />
+        "value" <br />
+        "placeholder" <br />
+        "required"
+      </p>
 
-    <p>"textarea" es un cuadro que nos permite almacenar bastante texto que no ocupa mucho espacio en la pagina porque es o puede ser escroleable dentro de un cuadro. atributos: <br> "rows" <br> "cols"</p>
+      <p>
+        "textarea" es un cuadro que nos permite almacenar bastante texto que no
+        ocupa mucho espacio en la pagina porque es o puede ser escroleable
+        dentro de un cuadro. atributos: <br />
+        "rows" <br />
+        "cols"
+      </p>
 
-    <p>"buton" es la etiqueta para crear botones. sus atributos son: <br> "type="submit"" o "button"</p>
+      <p>
+        "buton" es la etiqueta para crear botones. sus atributos son: <br />
+        "type="submit"" o "button"
+      </p>
 
-    <h3>Multimedia</h3>
+      <h3>Multimedia</h3>
 
-    <p>"audio" audio embebecido. atributos: <br> "src" <br> 
-    "controls"</p>
+      <p>
+        "audio" audio embebecido. atributos: <br />
+        "src" <br />
+        "controls"
+      </p>
 
-    <p>"video" video embebecido, atributos: "src" <br> "controls" <br> "whidth" <br> "Heigt"</p>
+      <p>
+        "video" video embebecido, atributos: "src" <br />
+        "controls" <br />
+        "whidth" <br />
+        "Heigt"
+      </p>
 
-    <h3>Scripts y estilos</h3>
+      <h3>Scripts y estilos</h3>
 
-    <p>"link" es una hoja de estilo externa.  atributos: <br> "rel="stylesheet" <br> "href"</p>
-
-    
-
-    <p></p>
-</body>
+      <p>
+        "link" es una hoja de estilo externa. atributos: <br />
+        "rel="stylesheet" <br />
+        "href"
+      </p>
+    </section>
+  </body>
 </html>
