Acabo de añadir info al archivo "aprenderHTML.html"

--- a/html/aprenderCSS.html
+++ b/html/aprenderCSS.html
@@ -13,13 +13,13 @@
       <nav>
         <h3><a href="/index.html">Inicio</a></h3>
         <ul>
-          <li>selectores</li>
-          <li>box model</li>
-          <li>texto y tipografia</li>
-          <li>visual y bordes</li>
-          <li>posicionamiento</li>
-          <li>transiciones y animaciones</li>
-          visual avanzado
+          <li><a href="#selectores">selectores</a></li>
+          <li><a href="#box-model">box model</a></li>
+          <li><a href="#texto-y-tipografia">texto y tipografia</a></li>
+          <li><a href="#visual-y-bordes">visual y bordes</a></li>
+          <li><a href="#posicionamiento">posicionamiento</a></li>
+          <li><a href="#tranciciones-y-animaciones">tranciciones y animaciones</a></li>
+          <li><a href="#visual-avanzado">visual avanzado</a></li>
         </ul>
       </nav>
     </header>
@@ -29,7 +29,7 @@
 
       <p>Veremos todo lo que es mas utilizado en css para dar estilo al html</p>
 
-      <section>
+      <section id="selectores">
         <h3>selectores</h3>
         <p>"Element", ".clase", "#id" seleccionan elementos del HTML</p>
         <br />
@@ -40,7 +40,7 @@
         </p>
       </section>
 
-      <section>
+      <section id="box-model">
         <h3>Box model (modelo de caja)</h3>
         <p>
           Propiedades utilizadas para hacer box model: <br />
@@ -48,7 +48,7 @@
         </p>
       </section>
 
-      <section>
+      <section id="texto-y-tipografia">
         <h3>Texto y tipografia</h3>
         <p>
           Las propiedades utilizadas para el texto y la tipografia son: <br />
@@ -57,7 +57,7 @@
         </p>
       </section>
 
-      <section>
+      <section id="visual-y-bordes">
         <h3>Visual (fondo y bordes)</h3>
         <p>
           "background-color", "background-image" "background-size", "border",
@@ -74,14 +74,14 @@
         </p>
       </section>
 
-      <section>
+      <section id="posicionamiento">
         <h3>Posicionamiento</h3>
 
         <p>position: static, relative, absolute, fixed, sticky.</p>
         <p>top, right, bottom, left, z-index.</p>
       </section>
 
-      <section>
+      <section id="tranciciones-y-animaciones">
         <h3>Transiciones y animaciones</h3>
 
         <p>
@@ -93,7 +93,7 @@
         </p>
       </section>
 
-      <section>
+      <section id="visual-avanzado">
         <h3>Visual "avanzado"</h3>
 
         <p>box-shadow, text-shadow, filter, transform, opacity, visibility.</p>
