--- a/html/aprenderJs.html
+++ b/html/aprenderJs.html
@@ -11,16 +11,15 @@
       <h1>Herramientas Js</h1>
       <h3><a href="/index.html">Inicio</a></h3>
       <ul>
-        <li>variables y tipos</li>
-        <li>Estructuras</li>
-        <li>Funciones</li>
-        <li>DOM</li>
-        <li>Fetch / AJAKS</li>
-        <li>Promesas y Async / Await</li>
-        <li>Promesas y Async / Await</li>
-        <li>Modulos</li>
-        <li>Clases</li>
-        <li>Manejo de errores</li>
+        <li><a href="#variables-y-tipos">variables y tipos</a></li>
+        <li><a href="#estructuras">Estructuras</a></li>
+        <li><a href="#funciones">Funciones</a></li>
+        <li><a href="#DOM">DOM</a></li>
+        <li><a href="#fetch-ajaks">Fetch / AJAKS</a></li>
+        <li><a href="#promesas-y-async-await">Promesas y Async / Await</a></li>
+        <li><a href="#modulos">Modulos</a></li>
+        <li><a href="#clases">Clases</a></li>
+        <li><a href="#manejo-de-errores">Manejo de errores</a></li>
       </ul>
     </header>
 
@@ -30,7 +29,7 @@
       </h2>
     </main>
 
-    <section>
+    <section id="variables-y-tipos">
       <h3>Variables y tipos</h3>
 
       <p>"let", "const" y "var" son declaraciones</p>
@@ -42,7 +41,7 @@
       </p>
     </section>
 
-    <section>
+    <section id="estructuras">
       <h3>Estructuras</h3>
 
       <p>condicionales:</p>
@@ -59,12 +58,12 @@
       </p>
     </section>
 
-    <section>
+    <section id="funciones">
       <h3>Funciones</h3>
       <p>Cuando las entienda las describiré</p>
     </section>
 
-    <section>
+    <section id="DOM">
       <h3>DOM (Document Object Model)</h3>
 
       <p>
@@ -75,7 +74,7 @@
       </p>
     </section>
 
-    <section>
+    <section id="promesas-y-async-await">
       <h3>Promesas y Async/Await</h3>
       <p>
         new Promise((res, rej) => {}), .then(), .catch(), .finally(). <br />
@@ -83,7 +82,7 @@
       </p>
     </section>
 
-    <section>
+    <section id="modulos">
       <h3>Modulos</h3>
       <p>
         Exportar/importar: export, import ... from '...'. <br />
@@ -91,11 +90,11 @@
       </p>
     </section>
 
-    <search>
+    <search id="clases">
       <h3>Clases</h3>
     </search>
 
-    <section>
+    <section id="manejo-de-errores">
       <h3>Manejo de errores</h3>
     </section>
   </body>
