busque un roadmap de css para obtener un buen indice de aprendizaje progresivo

--- a/html/aprenderCSS.html
+++ b/html/aprenderCSS.html
@@ -13,13 +13,51 @@
       <nav>
         <h3><a href="/index.html">Inicio</a></h3>
         <ul>
-          <li><a href="#selectores">selectores</a></li>
-          <li><a href="#box-model">box model</a></li>
-          <li><a href="#texto-y-tipografia">texto y tipografia</a></li>
-          <li><a href="#visual-y-bordes">visual y bordes</a></li>
-          <li><a href="#posicionamiento">posicionamiento</a></li>
-          <li><a href="#tranciciones-y-animaciones">tranciciones y animaciones</a></li>
-          <li><a href="#visual-avanzado">visual avanzado</a></li>
+          <li>🔹 <strong>Nivel Básico: Fundamentos</strong>
+    <ul>
+      <li>¿Qué es CSS y cómo se aplica? Introducción al lenguaje, tipos de hojas de estilo (inline, interna, externa).</li>
+      <li>Selectores básicos: uso de selectores por etiqueta, clase, ID, agrupaciones.</li>
+      <li>Sintaxis de reglas CSS: propiedades, valores, llaves <code>{}</code>, y estructura de una regla.</li>
+      <li>Colores y unidades: nombres de color, HEX, RGB, HSL. Unidades como px, %, em, rem.</li>
+      <li>Modelo de caja (Box Model): padding, border, margin, contenido, y comportamiento de los elementos.</li>
+      <li>Propiedades de texto: fuente, tamaño, color, alineación, espaciado entre letras y líneas.</li>
+      <li>Fondos y bordes: colores de fondo, imágenes, tamaños, bordes redondeados y estilos.</li>
+      <li>Display y visibilidad: block, inline, none, inline-block, visibility.</li>
+      <li>Estilos de enlaces y listas: pseudo-clases como <code>:hover</code>, personalización de listas (<code>list-style</code>).</li>
+      <li>Introducción a responsive con media queries simples: cómo cambiar estilos según el tamaño de la pantalla.</li>
+    </ul>
+  </li>
+
+  <li>🟡 <strong>Nivel Intermedio: Diseño y Organización</strong>
+    <ul>
+      <li>Selectores avanzados: combinadores (<code>&gt;</code>, <code>+</code>, <code>~</code>), atributos (<code>[type="text"]</code>), pseudo-clases como <code>:nth-child()</code>.</li>
+      <li>Herencia, cascada y especificidad: cómo se aplican los estilos y qué tiene prioridad.</li>
+      <li>Flexbox (Flexible Box Layout): diseño unidimensional, alineación, distribución, dirección de los elementos.</li>
+      <li>Grid Layout (CSS Grid): diseño bidimensional, filas, columnas, áreas, auto-placement.</li>
+      <li>Media Queries avanzadas: breakpoints múltiples, orientación, resolución, condiciones combinadas.</li>
+      <li>Transiciones y animaciones básicas: <code>transition</code>, <code>transform</code>, <code>@keyframes</code>, efectos simples al pasar el mouse.</li>
+      <li>Organización del CSS: comentarios, orden lógico de propiedades, convenciones como BEM.</li>
+      <li>Variables CSS (<code>--nombre</code>): reutilización de valores, <code>:root</code>, uso con <code>var()</code>.</li>
+      <li>Positioning: <code>static</code>, <code>relative</code>, <code>absolute</code>, <code>fixed</code>, <code>sticky</code>, y <code>z-index</code>.</li>
+      <li>Zonas de scroll y overflow: manejo de contenido desbordado con <code>overflow</code>, <code>scroll</code> y <code>hidden</code>.</li>
+    </ul>
+  </li>
+
+  <li>🔵 <strong>Nivel Avanzado: Interactividad y Rendimiento</strong>
+    <ul>
+      <li>Animaciones complejas con <code>@keyframes</code>: encadenamiento, control de tiempos, animaciones múltiples.</li>
+      <li>Clases dinámicas con pseudo-clases: <code>:not()</code>, <code>:is()</code>, <code>:has()</code> (con soporte moderno), efectos complejos.</li>
+      <li>Funciones y cálculos: <code>calc()</code>, <code>clamp()</code>, <code>min()</code>, <code>max()</code>. Valores dinámicos y adaptativos.</li>
+      <li>Contenedores de layout modernos: <code>container queries</code>, <code>subgrid</code> y sus aplicaciones.</li>
+      <li>Modo oscuro y temas con CSS: <code>prefers-color-scheme</code>, uso de variables CSS para temas claros/oscuros.</li>
+      <li>Accesibilidad en CSS: buen contraste, foco visible, <code>:focus-visible</code>, <code>prefers-reduced-motion</code>.</li>
+      <li>Optimización de rendimiento: reducción de reflows, uso inteligente de clases, carga crítica de estilos.</li>
+      <li>Preprocesadores (Sass, Less): introducción, anidamiento, mixins, funciones, herencia.</li>
+      <li>CSS Modules / CSS-in-JS (React, Vue): cómo aislar estilos en proyectos con frameworks modernos.</li>
+      <li>Custom properties + JavaScript: cambiar estilos dinámicamente desde JS usando variables CSS.</li>
+    </ul>
+  </li>
+</ul>
         </ul>
       </nav>
     </header>
@@ -52,8 +90,8 @@
         <h3>Texto y tipografia</h3>
         <p>
           Las propiedades utilizadas para el texto y la tipografia son: <br />
-          "font-size", "font-family", "font-weight", "line-height", "text-align",
-          "color"
+          "font-size", "font-family", "font-weight", "line-height",
+          "text-align", "color"
         </p>
       </section>
 
