cambios en las secciones para reestructurar el contenido en base al indice nuevo

--- a/html/aprenderCSS.html
+++ b/html/aprenderCSS.html
@@ -67,74 +67,33 @@
 
       <p>Veremos todo lo que es mas utilizado en css para dar estilo al html</p>
 
-      <section id="selectores">
-        <h3>selectores</h3>
-        <p>"Element", ".clase", "#id" seleccionan elementos del HTML</p>
-        <br />
-        <p>
-          "element, element" <br />
-          "element element" <br />
-          "element > element" son combinadores
-        </p>
+      <section>
+        <h3>Que es CSS?</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, praesentium. Hic quia qui blanditiis tempore rerum doloribus eos voluptate quas architecto. Minima similique, voluptate ad eligendi laborum ducimus facere optio.</p>
       </section>
 
-      <section id="box-model">
-        <h3>Box model (modelo de caja)</h3>
-        <p>
-          Propiedades utilizadas para hacer box model: <br />
-          "margin", "padding", "width", "height", "box-sizing"
-        </p>
-      </section>
+      <section>
+        <h3>Selectores Basicos</h3>
 
-      <section id="texto-y-tipografia">
-        <h3>Texto y tipografia</h3>
         <p>
-          Las propiedades utilizadas para el texto y la tipografia son: <br />
-          "font-size", "font-family", "font-weight", "line-height",
-          "text-align", "color"
-        </p>
-      </section>
-
-      <section id="visual-y-bordes">
-        <h3>Visual (fondo y bordes)</h3>
-        <p>
-          "background-color", "background-image" "background-size", "border",
-          "border-radius", "opacity"
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ab consectetur magnam? Vero, nostrum cumque! Ex sit, eveniet aut hic veniam aspernatur optio cupiditate porro asperiores? Molestias itaque dolor iure?
         </p>
       </section>
 
       <section>
-        <h3>Layout</h3>
+        <h3>Sintaxis basico</h3>
+
         <p>
-          Todavia no llegue a estudiar este tema <br />
-          sus propiedades son: <br />
-          En "display": "block"
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores consequuntur velit, omnis facilis beatae tempore rem cupiditate error numquam consequatur aliquam ea. Provident architecto ea blanditiis, iste consequuntur rem corrupti!
         </p>
       </section>
 
-      <section id="posicionamiento">
-        <h3>Posicionamiento</h3>
-
-        <p>position: static, relative, absolute, fixed, sticky.</p>
-        <p>top, right, bottom, left, z-index.</p>
-      </section>
-
-      <section id="tranciciones-y-animaciones">
-        <h3>Transiciones y animaciones</h3>
+      <section>
+        <h3>Colores y unidades</h3>
 
         <p>
-          transition-property, transition-duration, transition-timing-function.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptates ab veritatis excepturi in iste explicabo voluptate culpa consectetur, repellat cumque cum tempore, ut maiores placeat blanditiis quam nostrum deleniti.
         </p>
-        <p>
-          animation-name, animation-duration, animation-iteration-count,
-          @keyframes.
-        </p>
-      </section>
-
-      <section id="visual-avanzado">
-        <h3>Visual "avanzado"</h3>
-
-        <p>box-shadow, text-shadow, filter, transform, opacity, visibility.</p>
       </section>
     </main>
   </body>
